fix overlapping footer in viewer

--- a/style/pages/viewer.css
+++ b/style/pages/viewer.css
@@ -12,3 +12,7 @@ progress {
     width: 100%;
     display: block;
 }
+
+body > footer {
+    display: none;
+}
